--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ idna==3.11
 oauth2client==4.1.3
 oauthlib==3.3.1
 outcome==1.3.0.post0
+packaging==25.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pycparser==2.23
@@ -30,5 +31,6 @@ trio==0.31.0
 trio-websocket==0.12.2
 typing_extensions==4.15.0
 urllib3==2.5.0
+webdriver-manager==4.0.2
 websocket-client==1.9.0
 wsproto==1.2.0
